--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,4 +28,4 @@ jobs:
           flake8  --max-line-length=88 .
       - name: Run tests
         run: |
-          python -m unittest discover tests
+          python -m unittest tests/test_data.py
