--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           pip install flake8
           flake8  --max-line-length=88 .
+      - name: List repository files
+        run: ls -R
       - name: Run tests
         run: |
-          python -m unittest tests/test_data.py
+            python -m unittest discover -s tests
